# audio-server

./: .gitignore  CMakeLists.txt
client/: .clang-format  .clang-tidy  CMakeLists.txt  main.cpp
client/include/: BufferQueue.hpp  Listener.hpp  PacketHeader.hpp  Player.hpp  Transmitter.hpp
client/src/: Listener.cpp  Player.cpp  Transmitter.cpp
server/: .clang-format  CMakeLists.txt  main.cpp
server/include/: Buffer.hpp  BufferQueue.hpp  Connection.hpp
server/src/: Connection.cpp
